log
Thu Apr  7 15:17:16 UTC 2022: 
 hashmap.c | 8 ++++++--
 1 file changed, 6 insertions(+), 2 deletions(-)
In file included from test.c:4:0:
test.c: In function ‘createMap’:
hashmap.c:57:11: error: ‘Mapa’ may be used uninitialized in this function [-Werror=maybe-uninitialized]
       Mapa->buckets[i] = NULL;
       ~~~~^~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
7dbb936
Thu Apr  7 15:18:21 UTC 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:0:
hashmap.c: In function ‘createMap’:
hashmap.c:55:22: error: expected expression before ‘)’ token
     HashMap *Mapa = ();
                      ^
Compilation failed
c51d8fa
Thu Apr  7 15:18:44 UTC 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:0:
hashmap.c: In function ‘createMap’:
hashmap.c:55:21: error: initialization from incompatible pointer type [-Werror=incompatible-pointer-types]
     HashMap *Mapa = (Pair*)malloc(sizeof(Pair));
                     ^
cc1: all warnings being treated as errors
Compilation failed
bbeb4f2
Thu Apr  7 15:19:05 UTC 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
2a75bb3
Thu Apr  7 15:19:32 UTC 2022: 
 hashmap.c | 5 ++---
 1 file changed, 2 insertions(+), 3 deletions(-)
 tests:  0|0
d2b39db
Thu Apr  7 15:20:44 UTC 2022: 
 hashmap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|0
86b2787
Thu Apr  7 15:22:00 UTC 2022: 
 hashmap.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  0|0
18c2129
Thu Apr  7 15:22:16 UTC 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
9d1b5b9
Thu Apr  7 15:23:03 UTC 2022: 
 hashmap.c | 8 +-------
 1 file changed, 1 insertion(+), 7 deletions(-)
In file included from test.c:4:0:
hashmap.c: In function ‘createMap’:
hashmap.c:55:14: error: unused variable ‘Mapa’ [-Werror=unused-variable]
     HashMap *Mapa;
              ^~~~
hashmap.c:57:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1: all warnings being treated as errors
Compilation failed
35879e1
Thu Apr  7 15:24:44 UTC 2022: 
 hashmap.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
In file included from test.c:4:0:
test.c: In function ‘createMap’:
hashmap.c:57:13: error: ‘Mapa’ may be used uninitialized in this function [-Werror=maybe-uninitialized]
         Mapa->buckets[i]->key = NULL;
         ~~~~^~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
cb6bc14
Thu Apr  7 15:27:11 UTC 2022: 
 hashmap.c | 7 ++-----
 1 file changed, 2 insertions(+), 5 deletions(-)
 tests:  0|0
354bbfa
Thu Apr  7 15:28:51 UTC 2022: 
 hashmap.c | 2 ++
 1 file changed, 2 insertions(+)
In file included from test.c:4:0:
hashmap.c: In function ‘createMap’:
hashmap.c:58:11: error: ‘HashMap {aka struct HashMap}’ has no member named ‘bucket’; did you mean ‘buckets’?
     Mapa->bucket = (Pair**)malloc(sizeof(Pair));
           ^~~~~~
           buckets
Compilation failed
0bf6281
Thu Apr  7 15:28:57 UTC 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
f0307e5
Thu Apr  7 15:30:06 UTC 2022: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
5db3cd6
Thu Apr  7 15:30:13 UTC 2022: 
 hashmap.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  0|6
total_score: 0/70
2f59048
Thu Apr  7 15:30:43 UTC 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
c836787
Thu Apr  7 15:32:07 UTC 2022: 
 hashmap.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
In file included from test.c:4:0:
hashmap.c: In function ‘createMap’:
hashmap.c:58:61: error: expected expression before ‘)’ token
     Mapa->buckets = (Pair**)malloc(sizeof capacity * (Pair*));
                                                             ^
Compilation failed
d16d3ce
Thu Apr  7 15:32:17 UTC 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:0:
hashmap.c: In function ‘createMap’:
hashmap.c:58:62: error: expected expression before ‘)’ token
     Mapa->buckets = (Pair**)malloc(sizeof (capacity * (Pair*));
                                                              ^
hashmap.c:64:1: error: expected ‘;’ before ‘}’ token
 }
 ^
hashmap.c:64:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1: all warnings being treated as errors
Compilation failed
b469957
Thu Apr  7 15:34:27 UTC 2022: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:4:0:
hashmap.c: In function ‘createMap’:
hashmap.c:60:19: error: assignment from incompatible pointer type [-Werror=incompatible-pointer-types]
     Mapa->buckets = *par;
                   ^
cc1: all warnings being treated as errors
Compilation failed
604232d
Thu Apr  7 15:34:33 UTC 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
9f7b569
Thu Apr  7 15:35:08 UTC 2022: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
a68cb7f
Thu Apr  7 15:36:00 UTC 2022: 
 hashmap.c | 5 +----
 1 file changed, 1 insertion(+), 4 deletions(-)
 tests:  1|5
total_score: 10/70
a7b0ceb
Thu Apr  7 15:37:00 UTC 2022: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
965136f
